--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h1 {
 #intro p {
     font-size:50px;
     -webkit-text-stroke: 1px white; /* outline thickness + color */
+
 }
     #intro, #kontakt, #links{
         text-align:center;
@@ -86,5 +87,28 @@ h1 {
         width: 5000px;
     }
 
+.flex-container {
+    display: flex;
+    background-color: #ffffff;
+    flex-direction: row;
+    justify-content:center;
+    gap:150px;
+    align-items:center;
+    margin:200px;
+    width:75%;
+}
 
+.flex-container > div P {
+    background-color: #ffffff;
+    color: #0e0d0d;
+    width: 75px;
+    justify-content:left;
+    gap:100px;
+    align-item:center;
+    margin: 0px;
+    text-align: left;
+    line-height: 100px;
+    font-size: 150px;
+
+}
 
